--- a/www/index.html
+++ b/www/index.html
@@ -26,13 +26,15 @@
 		
 		$( document ).ready(function() {
 		var code=get_l_s_by_name("code");
+		location.href="login.html";
 		
+		/*
 		if(code!=""){
 		location.href="permis.html";
 		}else{
 		location.href="login.html";
 		}
-
+*/
 		});
 		
 		</script>
