--- a/www/questions.html
+++ b/www/questions.html
@@ -48,7 +48,12 @@
 		<div class="col s12 m12"><center><button class="aves-effect waves-light btn green" id="valider" > <i class="material-icons dp48">check</i> Valider</button></center></div>
 		</div>
 		
+		 
+		<div class="col s12 m12">
+            <br/>	 <br/>
+		<img src="http://admin.freetestmobile.com/img_pub/pub.png" style="height:90px;max-width:600px;width:auto;"/>
 		</div>
+            </div>
     </div>
   </div>
   </div>
