--- a/www/mon_compte.html
+++ b/www/mon_compte.html
@@ -45,7 +45,7 @@
 	
     <li class="collection-item avatar">
      <i class="material-icons dp48">school</i>
-      <span class="title"><span id="nom_ecole"></span></span>
+      <span class="title"><span id="nom_ecole_ap"></span></span>
    
      
     </li>
@@ -81,7 +81,7 @@
 	$("#code").text(code);
 	$("#nom").text(nom);
 	$("#nom_famille").text(nom_famille);
-	$("#nom_ecole").text(nom_ecole);
+	$("#nom_ecole_ap").text(nom_ecole);
 	$("#tel").text(tel);
 	$("#user_email").text(user_email);	
 		if(code==""){
