--- a/www/permis.html
+++ b/www/permis.html
@@ -59,7 +59,7 @@
 	
    permis+="<div class='col s6'><div class='menu-ico'><a href='"+url_s+"'><span class='text-g-icons'>"+data_res[i]['categorie']+"</span> <i class='material-icons g-icons'>"+data_res[i]['icon']+"</i></a></div></div>";
 }else{
-   permis+="<div class='col s6'><div class='menu-ico'><a href='#' class='disabled'><span class='text-g-icons'>"+data_res[i]['id_categorie']+"</span> <i class='material-icons g-icons'>"+data_res[i]['icon']+"</i></a></div></div>";
+   permis+="<div class='col s6'><div class='menu-ico'><a href='#' class='disabled'><span class='text-g-icons'>"+data_res[i]['categorie']+"</span> <i class='material-icons g-icons'>"+data_res[i]['icon']+"</i></a></div></div>";
 
 }
 }
