--- a/www/demo.html
+++ b/www/demo.html
@@ -5,9 +5,10 @@
 
 <div class="iphone_bg">
         	<div class="mobile_wrap">
-            <iframe id="frame" frameborder="no" border="0" scrolling="no" width="320px" height="568px;" src="http://h-cherradi.com/ftm/app/index.html"></iframe> 
+            <iframe id="frame" frameborder="no" border="0" scrolling="no" width="320px" height="568px;"
+			src="http://freetestmobile.com/ftm-admin/app/index.html"></iframe> 
             </div>
-</div>
+</div> 
 
 <style>
 body{
