--- a/www/resultat.html
+++ b/www/resultat.html
@@ -100,10 +100,10 @@ var arr_r_d=rep_def.split(",");
 
 rep_q_rep_user+="<br>";
 rep_q_rep_user+="<div class='row'>";
-rep_q_rep_user+="<div class='col s6'>";
-rep_q_rep_user+="<b>Réponse juste</b>";
+rep_q_rep_user+="<div class='col s3'>";
+rep_q_rep_user+="<b>R juste</b>";
 rep_q_rep_user+="</div>";
-rep_q_rep_user+="<div class='col s6'>";
+rep_q_rep_user+="<div class='col s9'>";
 rep_q_rep_user+="<div class='row'>";
 for(var j=1;j<=arr_r_d.length;j++){
 
@@ -128,10 +128,10 @@ var arr_reponse=reponse.split(",");
 
 
 rep_q_rep_user+="<div class='row'>";
-rep_q_rep_user+="<div class='col s6'>";
-rep_q_rep_user+="<b>Votre réponse</b>";
+rep_q_rep_user+="<div class='col s3'>";
+rep_q_rep_user+="<b>Votre R</b>";
 rep_q_rep_user+="</div>";
-rep_q_rep_user+="<div class='col s6'>";
+rep_q_rep_user+="<div class='col s9'>";
 rep_q_rep_user+="<div class='row'>";
 for(var k=1;k<=arr_reponse.length;k++){
 
