--- a/www/questions.html
+++ b/www/questions.html
@@ -33,6 +33,8 @@
 			<div class="progress col s12 display_none" id="loading"><div class="indeterminate orange" ></div></div>
 
           <img src="#" id="img_question" style="display: none;"/>
+		  
+		  <p id="question_arabic"></p>
 		<button type="button" id="btn_open_chat" class="btn-floating halfway-fab waves-effect waves-light orange"><i class="material-icons">chat</i></button>
           <button class="btn-floating halfway-fab waves-effect waves-light orange" value="0" id="play_audio" style="right: 80px;"><i class="material-icons">play_circle_outline</i></button>
         </div>
@@ -50,7 +52,7 @@
 		
 		 
 		<div class="col s12 m12 img_pub" style="display:none;">
-            <br/>	 <br/>
+            <br/>	
 		<img src="#" />
 		</div>
             </div>
@@ -191,7 +193,7 @@
 	$("#img_question").attr("src",data_res['url_image']);
 	$("#img_question").show();
 	audioElement.setAttribute('src', data_res['question_url_mp3c_arabic']);
-	
+	$("#question_arabic").html(data_res["question_arabic"]);
 	$("#question_n").text(question_n);
 	$("#total_question").text(total_question);
 	}
@@ -251,7 +253,7 @@
 	
 	$("#valider").click(function(){
 
-	
+	 $("#loading").show();
 
 	
 	var rep_q_user=[];
@@ -275,7 +277,7 @@
 	$.post(url_ws,{method:"user_reponse",question_id:id_question,sous_categorie_id:sous_categorie_id, reponse:rep_q_user,user_id:user_id,repense_valide:rep}, function() {
 	},"json")
 	.done(function(result) { 
-	
+	 $("#loading").hide();
 	}).fail(function() {
   
 	var $toastContent = $("<span > Votre réponse n'est pas été enregistré !   </span>");
