--- a/www/permis.html
+++ b/www/permis.html
@@ -26,14 +26,19 @@
     <div class="container">
 	<div class="progress col s12 display_none" id="loading"><div class="indeterminate orange" ></div></div>
      
-		<h6> <i class="material-icons header-icon-g" style="font-size:22px;">insert_emoticon</i> Bienvenue <span id="nom"></span> <span id="nom_famille"></span></h6>
+		<h6> Bienvenue <span id="nom"></span> <span id="nom_famille"></span></h6>
 
       <div class="row center menu-icons permis">
       
 
     </div>
   </div>
-  
+  </div>
+  <div class="fixed-action-btn footer-btn-hist">
+  <a class="btn-floating btn-large  orange">
+    <i class="large material-icons dp48">history</i>
+  </a>
+   </div>
  	<script type="text/javascript">
 	
 	$(document).ready(function(){
