--- a/www/questions.html
+++ b/www/questions.html
@@ -40,19 +40,28 @@
         </div>
         <div class="card-content ">
 		<div class="col s12 m12 rep_q_user">
-		<div class="col s3 m3"><button class="btn-floating btn-large grey" value='1'>1</button></div>
-		<div class="col s3 m3"><button class="btn-floating btn-large grey" value='1'>2</button></div>
-		<div class="col s3 m3"><button class="btn-floating btn-large grey" value='1'>3</button></div>
-		<div class="col s3 m3"><button class="btn-floating btn-large grey" value='1'>4</button></div>
+		<div class="col s6 m6"><button class="btn-floating btn-large grey" value='1'>1</button></div>
+		<div class="col s6 m6"><button class="btn-floating btn-large grey" value='1'>2</button></div>
+		<div class="col s6 m6"><button class="btn-floating btn-large grey" value='1'>3</button></div>
+		<div class="col s6 m6"><button class="btn-floating btn-large grey" value='1'>4</button></div>
         </div>
-		<div class="col s12 m12">
-		<br>
-		<div class="col s12 m12"><center><button class="aves-effect waves-light btn green" id="valider" > <i class="material-icons dp48">check</i> Valider</button></center></div>
+		
+		<div class="col s12 m12 btn-rep">
+		
+		<div class="col s6 m6"><button class="aves-effect waves-light btn green" id="valider" > 
+			<i class="material-icons dp48">check</i></button>
+		</div>
+		
+		<div class="col s6 m6">
+		<button class="aves-effect waves-light btn red" id="correction" >
+		<i class="material-icons dp48">replay</i></button>
+		</div>
+		
 		</div>
 		
 		 
 		<div class="col s12 m12 img_pub" style="display:none;">
-            <br/>	
+        
 		<img src="#" />
 		</div>
             </div>
@@ -108,7 +117,13 @@
 	
 	
 	$(document).ready(function(){
-        
+       $("#correction").click(function(){
+	$(".rep_q_user button").val("1");
+	$(".rep_q_user button").removeClass("amber");
+	$(".rep_q_user button").addClass("grey");
+	});
+	
+	
 // pub
         	$.post(url_ws,{method:"pub"}, function() {
 	},"json")
@@ -251,6 +266,7 @@
 	});
 	
 	
+	
 	$("#valider").click(function(){
 
 	 $("#loading").show();
@@ -267,7 +283,7 @@
 	rep_q_user=rep_q_user.join();
 	
 	var rep=1;
-	
+	$(".rep_q_user button").val("1");
 	if(rep_q_user==reponse_valide){
 	rep=2;
 	}
