--- a/www/permis.html
+++ b/www/permis.html
@@ -68,9 +68,8 @@
 	disabled="disabled";
 	}
 	
-   permis+="<div class='col s12 "+ class_p+"' data-id="+data_res[i]['id_categorie']+" ><div class='menu-ico'><button class='"+disabled+"' href='javascript:void(0)'>";
+   permis+="<div class='col s12 "+ class_p+"' data-id="+data_res[i]['id_categorie']+" ><div class='menu-ico "+disabled+"'>";
    permis+="<span class='text-g-icons'>"+data_res[i]['categorie']+"</span> <i class='material-icons g-icons'>"+data_res[i]['icon']+"</i>";
-   permis+="</button>";
    permis+="<ul class='collection with-header display_none sous_menu' id='"+data_res[i].id_categorie+"'>";
 	for(j=0;j<count_;j++){
 	var url_s="#";
