--- a/www/questions.html
+++ b/www/questions.html
@@ -314,7 +314,7 @@
 	
 	question++;
 	question_n++;
-	if(question_n>40){location.href="resultat.html?sous_categorie_id="+sous_categorie_id+"&sous_categorie="+sous_categorie;}else{
+	if(question_n>total_question){location.href="resultat.html?sous_categorie_id="+sous_categorie_id+"&sous_categorie="+sous_categorie;}else{
 	var data=all_data[question];
 	
 	next_q(data);
