--- a/www/resultat.html
+++ b/www/resultat.html
@@ -99,9 +99,9 @@ var arr_r_d=rep_def.split(",");
 
 
 rep_q_rep_user+="<br>";
-rep_q_rep_user+="<div class='row'>";
+rep_q_rep_user+="<div class='row row_reponse'>";
 rep_q_rep_user+="<div class='col s3'>";
-rep_q_rep_user+="<b>R juste</b>";
+rep_q_rep_user+="<b><i class='material-icons'>check_circle</i></b>";
 rep_q_rep_user+="</div>";
 rep_q_rep_user+="<div class='col s9'>";
 rep_q_rep_user+="<div class='row'>";
@@ -127,9 +127,9 @@ var arr_reponse=reponse.split(",");
 
 
 
-rep_q_rep_user+="<div class='row'>";
+rep_q_rep_user+="<div class='row row_reponse'>";
 rep_q_rep_user+="<div class='col s3'>";
-rep_q_rep_user+="<b>Votre R</b>";
+rep_q_rep_user+="<b><i class='material-icons'>account_box</i></b>";
 rep_q_rep_user+="</div>";
 rep_q_rep_user+="<div class='col s9'>";
 rep_q_rep_user+="<div class='row'>";
@@ -156,7 +156,7 @@ rep_q_rep_user+="</div>";
 
 	 
 	 $(".rep_q_rep_user").html(rep_q_rep_user);
-	$(".resltat_q").html(res_juste+"/"+40);
+	$(".resltat_q").html(res_juste+"/"+count);
 	    
 	// 	 $('.modal').modal();
 	
