--- a/www/questions.html
+++ b/www/questions.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
   <html>
-    <head> 
+    <head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 
       <!--Import Google Icon Font-->
@@ -20,7 +20,7 @@
 		<script type="text/javascript" src="js/db.js"></script>	 
 
 	  
-	    <nav class="orange" role="navigation" id="nav_mobile"></nav>
+	    <nav class="orange" role="navigation"  id="nav_mobile"></nav>
 		
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
@@ -34,7 +34,7 @@
 
           <img src="#" id="img_question" style="display: none;"/>
 		  
-		  <p id="question_arabic"></p>
+		  <div id="question_arabic"></div>
 		<button type="button" id="btn_open_chat" class="btn-floating halfway-fab waves-effect waves-light orange"><i class="material-icons">chat</i></button>
           <button class="btn-floating halfway-fab waves-effect waves-light orange" value="0" id="play_audio" style="right: 80px;"><i class="material-icons">play_circle_outline</i></button>
         </div>
