--- a/www/demo.html
+++ b/www/demo.html
@@ -15,17 +15,28 @@ body{
     margin: 0 auto;
     width: 520px;
     text-align: center;
+    background-color: #353434;
 }
 .iphone_bg {
-    width: 420px;
+    width: 560px;
     height: 816px;
     float: left;
-    background: url(http://sindevo.com/minio/preview/images/iphone.png) no-repeat center;
+    background: url(HTC_One_portrait.png) no-repeat center;
+    margin-top: 0px;
+    background-color: #353434;
+    padding: 31px;
 }
 .mobile_wrap {
     width: 320px;
     height: 568px;
-    padding: 120px 0 0 50px;
+    padding: 0;
+}
+#frame {
+    width: 370px;
+    padding: 0;
+    margin-left: 98px;
+    margin-top: 64px;
+    height: 643px;
 }
 </style>
 </body>
