--- a/www/login.html
+++ b/www/login.html
@@ -131,7 +131,7 @@ if(code==""){$("#code").css("border-bottom","2px solid #e74c3c");}else{$("#code"
 	set_l_s_by_name("last_id_chat","0");
 	}
 
-	location.href="permis.html";
+	location.href="dashboard.html";
 	}else{
 	
 	var AbonnementExp=data_res.AbonnementExp;
