--- a/www/mes_tests.html
+++ b/www/mes_tests.html
@@ -26,6 +26,8 @@
     			<div class="progress col s12 display_none" id="loading"><div class="indeterminate orange" ></div></div>
 
 	<h6 id="categorie">Mes tests</h6>
+	
+	<h6 id="moyenne"> </h6>
    <ul class="collection with-header series">
      
       
@@ -48,6 +50,21 @@
     var data_res=result.data;
 	var count=data_res.length;
 	
+	var sommme_n=0;
+	var sommme_c=0;
+	
+	if(count>0){
+	for(i=0;i<count;i++){
+	var note=data_res[i]['note'].split("/");
+	sommme_n=(sommme_n+parseInt(note[0]));
+	sommme_c=(sommme_c+parseInt(note[1]));
+	}
+	}
+	var mn=parseInt(sommme_n/count);
+	var mc=parseInt(sommme_c/count);
+	var m_note=mn+"/"+mc;
+	console.log(m_note);
+	$("#moyenne").html("La moyenne de notes : "+m_note);
 	if(count>0){
 	for(i=0;i<count;i++){
 	var url="resultat.html?sous_categorie_id="+data_res[i]['sous_categorie_id']+"&sous_categorie="+data_res[i]['sous_categorie'];
