--- a/www/questions.html
+++ b/www/questions.html
@@ -143,7 +143,7 @@
 	}
               
   $(".img_pub img").attr("src",url_fix+pub);
-   $(".img_pub a").attr("src",url_fix+data_res[0].url);
+   $(".img_pub a").attr("href",data_res[0].url);
 $(".img_pub").show();
   }).fail(function() {
   
