--- a/www/questions.html
+++ b/www/questions.html
@@ -62,7 +62,7 @@
 		 
 		<div class="col s12 m12 img_pub" style="display:none;">
         
-		<a href="#" target='blank'><img src="#" /></a>
+		<a href="#" target='_blank'><img src="#" /></a>
 		</div>
             </div>
     </div>
