--- a/www/a_propos.html
+++ b/www/a_propos.html
@@ -50,6 +50,11 @@
      <i class="material-icons dp48">local_phone</i>
       <span class="title"><span id="tel">+212 535 94 20 71</span></span>
     </li>
+	
+  <li class="collection-item avatar">
+     <i class="material-icons dp48">web</i>
+      <span class="title"><a id="tel" target="_blank" href="http://jhbplus.com">http://jhbplus.com</a></span>
+    </li>
 
 	  <li class="collection-item avatar">
      <i class="material-icons dp48">mail</i>
@@ -58,7 +63,7 @@
 	
 	  <li class="collection-item avatar">
      <i class="material-icons dp48">copyright</i>
-      <span class="title"><span id="user_email">jhb.plus 2017-2018</span></span>
+      <span class="title"><span id="user_email">jhb.plus 2018-2019</span></span>
     </li>
   </ul>
   
