--- a/www/a_propos.html
+++ b/www/a_propos.html
@@ -53,7 +53,7 @@
 	
   <li class="collection-item avatar">
      <i class="material-icons dp48">web</i>
-      <span class="title"><a id="tel" target="_blank" href="http://jhbplus.com">http://jhbplus.com</a></span>
+      <span class="title"><a id="tel" href="#" onclick="window.open('http://jhbplus.com', '_system');" >http://jhbplus.com</a></span>
     </li>
 
 	  <li class="collection-item avatar">
