--- a/www/questions.html
+++ b/www/questions.html
@@ -62,7 +62,7 @@
 		 
 		<div class="col s12 m12 img_pub" style="display:none;">
         
-		<a href="#" target='_blank'><img src="#" /></a>
+		<a href="#"  onclick="window.open('http://jhbplus.com', '_system');" ><img src="#" /></a>
 		</div>
             </div>
     </div>
@@ -143,7 +143,7 @@
 	}
               
   $(".img_pub img").attr("src",url_fix+pub);
-   $(".img_pub a").attr("href",data_res[0].url);
+  //  $(".img_pub a").attr("href",data_res[0].url);
 $(".img_pub").show();
   }).fail(function() {
   
