--- a/www/login.html
+++ b/www/login.html
@@ -46,6 +46,16 @@
 			</center>
 		</div>
 		
+         <div class="row ">
+        <div class="col s12">
+       
+        <p style="text-align:center;font-weight: bold;"> Pour avoir le code d'activation merci de contacter </p>
+        <p style="text-align:center;font-weight: bold;"> votre auto-école ou bien la societe JHB PLUS </p>
+        <p style="text-align:center;font-weight: bold;">( 0535942071 0661189821 )</p>
+
+    
+            </div>
+         </div>
       </div>
     </form>
   </div>
