--- a/www/login.html
+++ b/www/login.html
@@ -50,8 +50,9 @@
         <div class="col s12">
        
         <p style="text-align:center;font-weight: bold;"> Pour avoir le code d'activation merci de contacter </p>
-        <p style="text-align:center;font-weight: bold;"> votre auto-école ou bien la societe JHB PLUS </p>
+        <p style="text-align:center;font-weight: bold;"> votre auto-école ou bien la société JHB PLUS </p>
         <p style="text-align:center;font-weight: bold;">( 0535942071 0661189821 )</p>
+        <p style="text-align:center;font-weight: bold;">jhb.plus@yahoo.com</p>
 
     
             </div>
