--- a/www/questions.html
+++ b/www/questions.html
@@ -20,6 +20,12 @@
     border-radius: 0px;
     background: #565252 !important;
              }
+             #left{
+                    float: left;
+             }
+              #right{
+                    float: right;
+             }
        </style>
     </head>
 
