--- a/www/questions.html
+++ b/www/questions.html
@@ -72,8 +72,8 @@
 		</div>
 		
 		<div class="col s6 m6">
-		<button class="aves-effect waves-light btn red" id="correction" >
-		<i class="material-icons dp48">replay</i></button>
+		<a href="mes_tests.html"  class="aves-effect waves-light btn red"  id="correction" >
+		<i class="material-icons dp48">replay</i></a>
 		</div>
 		
 		</div>
@@ -136,7 +136,7 @@
 	
 	
 	$(document).ready(function(){
-       $("#correction").click(function(){
+       $("#correction_").click(function(){
 	$(".rep_q_user button").val("2");
 	$(".rep_q_user button").removeClass("amber");
 	$(".rep_q_user button").addClass("grey");
