--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -51,7 +51,7 @@
           <h6> <center> <span id="nom"></span> <span id="nom_famille"></span>  </center> </h6>
        
 	
-       <h6 class='h6'> <i class='material-icons icon-header-cadr'>insert_chart</i>Pourcentage des tests realisé </h6>
+       <h6 class='h6'> <i class='material-icons icon-header-cadr'>insert_chart</i>Pourcentage des tests realisés </h6>
       <div class="row center menu-icons progression">
       </div>
 	
